# orion.algo.zero_order_momentum

./: .gitattributes  LICENSE  MANIFEST.in  README.rst  setup.cfg  setup.py
doc/src/: conf.py  index.rst
src/orion/algo/zero_order_momentum/: __init__.py  _version.py  zero_order_momentum.py
test/benchmark/: zero_order_momentum.yaml
