[versioneer]
VCS=git
style=pep440-post
versionfile_source=src/orion/algo/zero_order_momentum/_version.py
versionfile_build=orion/algo/zero_order_momentum/_version.py
tag_prefix=
parentdir_prefix=orion.algo.zero_order_momentum-

[aliases]
test=pytest

[bdist_wheel]
universal=1

[metadata]
license_file=LICENSE
